# dce

./: .gitignore  Makefile
config/: config.yml
docs/: Makefile  pyproject.toml  terraform.md
modules/: api_roles.tf  aws_nuke.tf  main.tf  outputs.tf  reset_codebuild.tf  variables.tf
modules/fixtures/: aws-nuke.yml
scripts/: deploy.sh
tools/api/: Makefile  api.py  pyproject.toml
tools/api/cli/: main.py
tools/api/cli/actions/: __init__.py  accounts.py  leases.py
tools/api/cli/api_client/: accounts.py  leases.py
tools/api/cli/utils/: logger.py
tools/apitest/: Makefile  api_test.py  pyproject.toml
tools/dce-api/: Makefile
tools/dce-api/api/: main.py
tools/dce-api/api/actions/: accounts.py
tools/dce-api/api/utils/: auth.py
