[tool.poetry]
name = "apitest"
version = "0.1.0"
description = ""
authors = ["Alex Chesters <alex@cheste.rs>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
aws-requests-auth = "^0.4.3"
boto3 = "^1.34.132"
inquirer = "^3.2.5"
colored = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
